<resources>
    <string name="app_name">Capstone-Project</string>
    <string name="new_note_screen_title">New Note</string>
    <string name="note_title">Note Title</string>
    <string name="note_body">Note Body</string>
    <string name="save">Save</string>
    <string name="notes_screen_title">Simple Notes App</string>
    <string name="delete_note">delete note</string>
    <string name="empty_view_text">No Notes Found, Add them by clicking on the + icon</string>
    <string name="add_note">Add Note</string>
    <string name="add_new_note">add new note</string>
    <string name="admob_test_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="fields_empty_error">You have to enter both the note title and body first</string>
    <string name="add_new_note_content_description">Add new note</string>
    <string name="toolbar_image">toolbar image</string>
</resources>
